--- a/HumanPose/Preprocessing.ipynb
+++ b/HumanPose/Preprocessing.ipynb
@@ -22,16 +22,7 @@
     "* 처리 형식\n",
     "\n",
     "    1. 전체 데이터세트 이미지 최대 크기와 평균 크기 측정 -> 이미지 크기 조정\n",
-    "    2. 크기 조정 비율에 따른 좌표값 재처리\n",
-    "    \n",
-    "* 추가 안내\n",
-    "\n",
-    "해당 코드를 실행하면서 Jupyter Notebook 상으로 사진을 확인하면 이미지의 색이 이상하게 보이는 현상이 있음. \n",
-    "matplotlib과 cv2의 색 채널을 서로 다르게 사용하기 때문임.\n",
-    "\n",
-    "_**matplitlib은 RGB로 보여주지만 opencv는 채널이 BGR로 사용함**_\n",
-    "\n",
-    "그래도 전처리 할 때에는 이 채널을 transpose 하여 하기 때문에 이미지 저장을 할 때는 크게 신경쓰지 않고 저장하여도 상관 없음."
+    "    2. 크기 조정 비율에 따른 좌표값 재처리"
    ]
   },
   {
@@ -43,7 +34,8 @@
     "import numpy as np # Numpy 배열 사용용도\n",
     "import matplotlib.pyplot as plt # 이미지출력 용도\n",
     "import pandas as pd # csv 파일을 pandas 프레임으로 호출 용도\n",
-    "import cv2 # 이미지 불러오기 및 저장용도\n",
+    "import skimage\n",
+    "from skimage import io, transform # 이미지 불러오기 및 저장용도\n",
     "\n",
     "# 주피터 노트북 상에 이미지를 출력하도록 설정\n",
     "%matplotlib inline"
@@ -56,7 +48,7 @@
    "outputs": [],
    "source": [
     "# dataset CSV 파일을 불러와 pandas 프레임으로 저장한 뒤에 Numpy형식의 행렬로 변환하여 testset 변수에 저장\n",
-    "testset=pd.read_csv(\"/home/hahnz/dataset.csv\",header=None).as_matrix()"
+    "testset=pd.read_csv(\"/var/data/MET/dataset.csv\",header=None).as_matrix()"
    ]
   },
   {
@@ -78,7 +70,7 @@
     "allsum_x=allsum_y=max_x=max_y=0\n",
     "\n",
     "for i in range(len(testset)): # testset 길이만큼 반복 \n",
-    "    img=cv2.imread(testset[i][0]) # 이미지 불러오기\n",
+    "    img=skimage.io.imread(testset[i][0]) # 이미지 불러오기\n",
     "    if max_x<img.shape[0]: max_x=img.shape[0] # 최대 x축 길이값 저장\n",
     "    if max_y<img.shape[1]: max_y=img.shape[1] # 최대 y축 길이값 저장\n",
     "    allsum_x+=img.shape[0] # 모든 이미지의 x축 크기 총합\n",
@@ -130,9 +122,9 @@
     "    coor_set=convert_str_to_int(dataset) # 문자열의 좌표값을 정수형 좌표값으로 변환하여 저장\n",
     "    \n",
     "    for i in range(len(dataset)): # 주어진 데이터 갯수만큼 반복\n",
-    "        img=cv2.imread(dataset[i][0], cv2.COLOR_BGR2RGB) # 이미지 불러오기\n",
+    "        img=skimage.io.imread(dataset[i][0]) # 이미지 불러오기\n",
     "        \n",
-    "        img_set[i]=cv2.resize(img,(256,256)) # 이미지 크기를 재조정 하여 저장\n",
+    "        img_set[i]=skimage.transform.resize(img,(256,256)) # 이미지 크기를 재조정 하여 저장\n",
     "        \n",
     "        #이미지 크기 변환을 하였으므로 그에 걸맞게 좌표 위치또한 재조정\n",
     "        for j in range(14): #주어진 좌표 개수 만큼 반복\n",
@@ -148,8 +140,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hahnz/.local/lib/python3.5/site-packages/skimage/transform/_warps.py:84: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
+      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n"
+     ]
+    }
+   ],
    "source": [
     "# 전처리 함수의 입력으로 불러온 CSV 파일을 저장한 testset 변수로 입력.\n",
     "# 변환된 이미지 세트와 좌표 세트를 각각 picpic과 coco에다 저장해줌.\n",
@@ -184,41 +187,53 @@
    "source": [
     "# 이미지와 좌표를 받아와서 이미에 해당 좌표를 입력\n",
     "# 잘 변환이 되었는지 확인하는 용도\n",
+    "\n",
+    "import cv2 # 그림에 숫자 넣기\n",
+    "from skimage import draw # 그림에 원 그리기\n",
+    "\n",
     "def markJoints(img, joints):  \n",
-    "    numJoints, t = joints.shape\n",
-    "    circSize=10\n",
-    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "    circSize=5 # 그려질 원의 크기\n",
+    "    font = cv2.FONT_HERSHEY_SIMPLEX # 글씨체 설정\n",
     "    for i in range(numJoints):\n",
-    "        x = int(joints[i,0])\n",
-    "        y = int(joints[i,1])\n",
-    "    \n",
-    "        cv2.circle(img, (x, y), 4, (255, 0, 0), thickness=-1)\n",
-    "        cv2.putText(img, str(i+1), (x,y), font, 0.5, (100,100,100), 1, cv2.LINE_AA)\n",
+    "        x = int(joints[i,0]) # X 좌표\n",
+    "        y = int(joints[i,1]) # Y 좌표\n",
+    "        if x!=-1: # 그림에서 보이지 않는 좌표는 찍지 않도록\n",
+    "            rr, cc = skimage.draw.circle(y, x, circSize) # 원 그리기\n",
+    "            skimage.draw.set_color(img, (rr, cc), (1,0,0)) # 색 설정\n",
+    "            cv2.putText(img, str(i+1), (x,y), font, 0.5, (0.5,0.5,0.5), 2, cv2.LINE_AA) # 그림 ㄱ\n",
     "    return img"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘p_img’: File exists\r\n",
+      "mkdir: cannot create directory ‘p_with_coors_img’: File exists\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hahnz/.local/lib/python3.5/site-packages/skimage/util/dtype.py:122: UserWarning: Possible precision loss when converting from float64 to uint8\n",
+      "  .format(dtypeobj_in, dtypeobj_out))\n"
+     ]
+    }
+   ],
    "source": [
     "# 전처리된 이미지 저장\n",
-    "%mkdir p_img # 현재 디렉토리에 저장할 디렉토리 생성\n",
+    "%mkdir p_img p_with_coors_img # 현재 디렉토리에 처리된 이미지와 좌표를 찍은 이미지들을 저장할 디렉토리 생성\n",
     "for i in range(len(picpic)):\n",
-    "    cv2.imwrite(\"./processed_img/p-img_\"+str(i)+\".jpg\",picpic[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 전처리된 이미지에 좌표를 찍어서 저장\n",
-    "%mkdir p_with_coors_img # 현재 디렉토리에 저장할 디렉토리 생성\n",
-    "for i in range(len(picpic)):\n",
-    "    cv2.imwrite(\"./processed_img/p-img_\"+str(i)+\".jpg\",markJoints(picpic[i],coco[i]))"
+    "    skimage.io.imsave(\"./p_img/p-img_\"+str(i)+\".jpg\",picpic[i]) # 처리된 이미지 저장\n",
+    "    skimage.io.imsave(\"./p_with_coors_img/p-img_\"+str(i)+\".jpg\",markJoints(picpic[i],coco[i])) # 좌표 입력 이미지 저장"
    ]
   }
  ],
