--- a/HumanPose/train_test_split.ipynb
+++ b/HumanPose/train_test_split.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(np.array(test_csv)).to_csv(\"train.csv\", sep=',', encoding='utf-8',index=False,header=None)\n",
+    "pd.DataFrame(np.array(train_csv)).to_csv(\"train.csv\", sep=',', encoding='utf-8',index=False,header=None)\n",
     "pd.DataFrame(np.array(test_csv)).to_csv(\"test.csv\", sep=',', encoding='utf-8',index=False,header=None)"
    ]
   }
